2012-02-27  Miguel de Dios  <miguel.dedios@artica.es>

	* include/graphs/functions_pchart.php: fixed when the var for $colors is a
	other thing distint to array (for example a empty string).

2012-02-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Added call to fs_error_image function 
	when there is no data in a sparse graph.

2012-02-27  Vanessa Gil  <vanessa.gil@artica.es>

	* pandoradb.sql
	  pandoradb.oracle.sql
	  pandoradb.postgreSQL.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Removed
	'tgraph_template' and 'tgraph_source_template' tables.

2012-02-24  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/include/functions_ui.php: changed the source code into the
	function "ui_get_full_url" for accept false for to return url with the home
	url or with any string (as query) return url with the php file.

	* pandora_console/include/functions_graph.php,
	pandora_console/include/functions_html.php,
	pandora_console/include/functions_events.php,
	pandora_console/include/functions_reporting.php,
	pandora_console/include/functions_api.php,
	pandora_console/include/functions.php, pandora_console/index.php,
	pandora_console/extensions/system_info.php,
	pandora_console/operation/agentes/stat_win.php,
	pandora_console/operation/menu.php,
	pandora_console/operation/events/events_rss.php,
	pandora_console/operation/events/events_marquee.php,
	pandora_console/operation/events/events.php: change in more part of source
	code to use "ui_get_full_url" instead the hard write method of $_SERVER
	vars, now Pandora Console run fine (in all actions I hope) with web servers
	in other ports instead the typical 80.

	Merged from branch pandora_4.0

2012-02-24  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions.php: clean source style. 

2012-02-24  Vanessa Gil  <vanessa.gil@artica.es>
