@@ -49,11 +49,11 @@ $plugin_parameter = (string) get_parameter ('plugin_parameter');
 $max_timeout = (int) get_parameter ('max_timeout');
 $id_modulo = (int) get_parameter ('id_component_type');
 $id_plugin = (int) get_parameter ('id_plugin');
-$min_warning = (int) get_parameter ('min_warning');
-$max_warning = (int) get_parameter ('max_warning');
+$min_warning = (float) get_parameter ('min_warning');
+$max_warning = (float) get_parameter ('max_warning');
 $str_warning = (string) get_parameter ('str_warning');
-$min_critical = (int) get_parameter ('min_critical');
-$max_critical = (int) get_parameter ('max_critical');
+$min_critical = (float) get_parameter ('min_critical');
+$max_critical = (float) get_parameter ('max_critical');
 $str_critical = (string) get_parameter ('str_critical');
 $ff_event = (int) get_parameter ('ff_event');
 $history_data = (bool) get_parameter ('history_data');
